headroom, smooth scroll, banner mixins

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <div class="site-wrapper">
 
-    <header class="site-header">
-      <nav class="navbar navbar-inverse fixed-top navbar-toggleable-md" role="navigation">
+    <header class="site-header fixed-top">
+      <nav class="navbar navbar-inverse navbar-toggleable-md" role="navigation">
         <div class="container">
           <a class="navbar-brand" href="#"><img src="images/concordus-logo-white-h.svg" alt="Concordus Applications" /></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu"
@@ -77,9 +77,33 @@
       <section class="masthead bg-hero bg-hero-globe theme-black">
         <div class="container">
           <h1>Building a Connected World</h1>
-          <p class="lead">Innovative, smart and cost-effective software development an integration provided as a service, for Telcos and
+          <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and
             Enterprises.</p>
-          <button class="btn btn-round btn-primary">Learn More</button>
+          <a href="#page-start" class="btn btn-round btn-primary" data-scroll>Learn More</a>
+        </div>
+      </section>
+
+      <!-- CTA banner -->
+      <section id="page-start" class="banner banner-full">
+        <div class="container">
+          <!-- banner -->
+          <div class="card card-row card-clean">
+            <img src="https://unsplash.it/500/500/?random" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <!-- banner -->
+          <div class="card card-row card-row-rev card-clean">
+            <img src="https://unsplash.it/500/500?random" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
       </section>
 
