banner layout, button & icon styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="site-wrapper">
 
     <header class="site-header fixed-top">
-      <nav class="navbar navbar-inverse navbar-toggleable-md" role="navigation">
+      <nav class="navbar navbar-inverse navbar-toggleable-md main-menu" role="navigation">
         <div class="container">
           <a class="navbar-brand" href="#"><img src="images/concordus-logo-white-h.svg" alt="Concordus Applications" /></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu"
@@ -33,11 +33,11 @@
 
           <div class="collapse navbar-collapse" id="main-menu">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+              <!--<li class="nav-item active">
                 <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-              </li>
+              </li>-->
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">About us</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="http://example.com" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true"
@@ -47,13 +47,7 @@
                   <a class="dropdown-item" href="#">Another action</a>
                   <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Testing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Customers</a>
-              </li>
+              </li>              
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="http://example.com" id="analytics-dropdown" data-toggle="dropdown" aria-haspopup="true"
                   aria-expanded="false">Analytics</a>
@@ -63,6 +57,15 @@
                   <a class="dropdown-item" href="#">Reaping the Benefits of Real-Time Analytics</a>
                   <a class="dropdown-item" href="#">Sentiment Analysis</a>
                 </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Testing</a>
+              </li>
+              <!--<li class="nav-item">
+                <a class="nav-link" href="#">Customers</a>
+              </li>-->
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact us</a>
               </li>
             </ul>
 
@@ -79,7 +82,7 @@
           <h1>Building a Connected World</h1>
           <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and
             Enterprises.</p>
-          <a href="#page-start" class="btn btn-round btn-primary" data-scroll>Learn More</a>
+          <a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Learn More <svg class="icon rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>
         </div>
       </section>
 
@@ -88,20 +91,20 @@
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-clean">
-            <img src="https://unsplash.it/500/500/?random" alt="Card image cap">
+            <img src="images/content/img-content-subscription-services.png" alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h2 class="card-title">Subscription Services</h2>
+              <p class="card-text">The hosted Software-as-a-Service (SaaS) model also allows service providers to become more agile with the ability to quickly create, bundle and implement new offerings with minimal CapEx investments.</p>
+              <a href="#" class="btn btn-lg btn-text">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
           <!-- banner -->
           <div class="card card-row card-row-rev card-clean">
-            <img src="https://unsplash.it/500/500?random" alt="Card image cap">
+            <img src="images/content/img-content-integration-team.png" alt="Integration Team sitting in the office">
             <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h2 class="card-title">Integration Services</h2>
+              <p class="card-text">Our team has deep understanding and capability in designing solutions ground up to take advantage of cloud’s extreme elasticity and physical availability across multiple geographies.</p>
+              <a href="#" class="btn btn-lg btn-text">Meet the team <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
         </div>
