--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
               </li>-->
               <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="http://example.com" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true"
@@ -65,7 +65,10 @@
                 <a class="nav-link" href="#">Customers</a>
               </li>-->
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact us</a>
+                <a class="nav-link" href="contact.html"  data-toggle="modal" data-target="#contact-modal">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Demo</a>
               </li>
             </ul>
 
@@ -121,7 +124,51 @@
 
   </div>
 
-
+<!-- Contact modal -->
+<div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+  <div class="modal-dialog mw-48em" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title h5 mb-0" id="contact-modal">Get in touch</h2>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="" action="post">
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="name" class="form-control-label">Name:</label>
+              <input type="text" class="form-control" id="name" required>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="email" class="form-control-label">Email:</label>
+              <input type="email" class="form-control" id="email" autocorrect="off" autocapitalize="none" spellcheck="false" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="name" class="form-control-label">Company:</label>
+              <input type="text" class="form-control" id="company">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="phone" class="form-control-label">Phone:</label>
+              <input type="tel" class="form-control" id="phone" pattern="[0-9]*" maxlength="10">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="message-text" class="form-control-label">Message:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
