font styles, font-loading audit

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,7 +93,7 @@
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-clean">
-            <img src="images/content/img-content-subscription-services.png" alt="Card image cap">
+            <img src="images/content/img-content-subscription-services.jpg" class="lazyload" alt="Card image cap">
             <div class="card-block">
               <h2 class="card-title">Subscription Services</h2>
               <p class="card-text">The hosted Software-as-a-Service (SaaS) model also allows service providers to become more agile with the ability to quickly create, bundle and implement new offerings with minimal CapEx investments.</p>
@@ -103,7 +102,7 @@
           </div>
           <!-- banner -->
           <div class="card card-row card-row-rev card-clean">
-            <img src="images/content/img-content-integration-team.png" alt="Integration Team sitting in the office">
+            <img src="images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office">
             <div class="card-block">
               <h2 class="card-title">Integration Services</h2>
               <p class="card-text">Our team has deep understanding and capability in designing solutions ground up to take advantage of cloud’s extreme elasticity and physical availability across multiple geographies.</p>
@@ -170,24 +169,6 @@
   </div>
 </div>
 
-
-
-
-
-
-
-
-
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-slim.min.js"><\/script>')</script>
-  <script src="js/bootstrap.min.js"></script>
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="js/libs/ie10-viewport-bug-workaround.js"></script>
-  <!-- Custom scripts -->
-  <script src="js/script.min.js"></script>
   <!-- async font loading -->
   <script>
     var html = document.documentElement;
@@ -217,6 +198,18 @@
     }
 
   </script>
+
+
+  <!-- Bootstrap core JavaScript
+    ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/libs/jquery-slim.min.js"><\/script>')</script>
+  <script src="js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="js/libs/ie10-viewport-bug-workaround.js"></script>
+  <!-- Custom scripts -->
+  <script src="js/script.min.js"></script>
 
   <!-- async icon sprite -->
   <script>
