headroom changes, landing page content, responsive images

--- a/index.html
+++ b/index.html
@@ -93,20 +93,93 @@
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-clean">
-            <img src="images/content/img-content-subscription-services.jpg" class="lazyload" alt="Card image cap">
+            <figure class="media-item mb-0 lazyload">
+              <picture>
+              <source media="(max-width: 47.99em)" srcset="images/content/img-content-subscription-services-crop.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+              <source media="(min-width: 48em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+              <img src="images/content/img-content-subscription-services.jpg"  alt="A group of application interfaces arranged in a cool grid.">
+                <noscript>
+                  <img src="images/content/img-content-subscription-services.jpg"  alt="A group of application interfaces arranged in a cool grid.">
+                </noscript>
+              </picture>
+            </figure>
             <div class="card-block">
-              <h2 class="card-title">Subscription Services</h2>
+              <h2 id="subscription-services" class="card-title">Subscription Services</h2>
               <p class="card-text">The hosted Software-as-a-Service (SaaS) model also allows service providers to become more agile with the ability to quickly create, bundle and implement new offerings with minimal CapEx investments.</p>
               <a href="#" class="btn btn-lg btn-text">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- CTA banner -->
+      <section class="banner banner-full">
+        <div class="container">
           <!-- banner -->
           <div class="card card-row card-row-rev card-clean">
-            <img src="images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office">
+            <figure class="media-item mb-0 lazyload">
+              <picture>
+              <source media="(max-width: 47.99em)" srcset="images/content/img-content-integration-team-crop.jpg" class="lazyload" alt="Integration Team sitting in the office.">
+              <source media="(min-width: 48em)" srcset="images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">
+              <img src="images/content/img-content-integration-team.jpg"  alt="Integration Team sitting in the office.">
+                <noscript>
+                  <img src="images/content/img-content-integration-team.jpg"  alt="Integration Team sitting in the office.">
+                </noscript>
+              </picture>
+            </figure>
             <div class="card-block">
-              <h2 class="card-title">Integration Services</h2>
+              <h2 id="integration-services" class="card-title">Integration Services</h2>
               <p class="card-text">Our team has deep understanding and capability in designing solutions ground up to take advantage of cloud’s extreme elasticity and physical availability across multiple geographies.</p>
               <a href="#" class="btn btn-lg btn-text">Meet the team <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA banner -->
+      <section id="page-start" class="banner banner-full">
+        <div class="container">
+          <!-- banner -->
+          <div class="card card-row card-clean">
+            <figure class="media-item mb-0 lazyload">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-testing.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
+                <img src="images/content/img-content-testing-crop.png" data-src="images/content/img-content-testing-crop.png" class="lazyload" alt="Integration Team sitting in the office.">
+                <noscript>
+                  <img src="images/content/img-content-testing-noscript.jpg" alt="Integration Team sitting in the office.">
+                </noscript>
+              </picture>
+            </figure>
+            <div class="card-block">
+              <h2 id="advanced-testing" class="card-title">Advanced Testing</h2>
+              <p class="card-text">Our testing platform reduces risk and costs while delivering continuous quality. We help our clients to avoid unnecessary test costs by designing and managing the end-to-end Testing process and keep the focus on delivering the best value.</p>
+              <a href="#" class="btn btn-lg btn-text">Take a closer look <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA banner -->
+      <section class="banner banner-full">
+        <div class="container">
+          <!-- banner -->
+          <div class="card card-row card-row-rev card-clean">
+            <figure class="media-item mb-0 lazyload">
+              <picture>
+              <source media="(max-width: 47.99em)" srcset="images/content/img-content-analytics-crop.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
+              <source media="(min-width: 48em)" srcset="images/content/img-content-analytics.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
+              <img src="images/content/img-content-analytics.jpg"  alt="Illustration of analytical icons. Vector art." >
+                <noscript>
+                  <img src="images/content/img-content-analytics.jpg"  alt="Illustration of analytical icons. Vector art." >
+                </noscript>
+              </picture>
+            </figure>
+            
+            
+            <div class="card-block">
+              <h2 id="custom-analytics" class="card-title">Custom Analytics</h2>
+              <p class="card-text">Our technology and service transforms the way our customers make decisions. We combine data, technology and analytics to give our customers a competitive edge and help customers rethink and reinvent their strategy by understanding their business data.</p>
+              <a href="#" class="btn btn-lg btn-text">Browse sample reports <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
         </div>
