--- a/index.html
+++ b/index.html
@@ -95,11 +95,10 @@
           <div class="card card-row card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-              <source media="(max-width: 47.99em)" srcset="images/content/img-content-subscription-services-crop.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
-              <source media="(min-width: 48em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
-              <img src="images/content/img-content-subscription-services.jpg"  alt="A group of application interfaces arranged in a cool grid.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">              
+                <img src="images/content/img-content-subscription-services-crop.png" data-src="images/content/img-content-subscription-services-crop.png" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services.jpg"  alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-noscript.jpg" alt="A group of application interfaces arranged in a cool grid.">
                 </noscript>
               </picture>
             </figure>
@@ -119,11 +118,10 @@
           <div class="card card-row card-row-rev card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-              <source media="(max-width: 47.99em)" srcset="images/content/img-content-integration-team-crop.jpg" class="lazyload" alt="Integration Team sitting in the office.">
-              <source media="(min-width: 48em)" srcset="images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">
-              <img src="images/content/img-content-integration-team.jpg"  alt="Integration Team sitting in the office.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
+                <img src="images/content/img-content-integration-team-crop.png" data-src="images/content/img-content-integration-team-crop.png" class="lazyload" alt="Integration Team sitting in the office.">
                 <noscript>
-                  <img src="images/content/img-content-integration-team.jpg"  alt="Integration Team sitting in the office.">
+                  <img src="images/content/img-content-integration-team-noscript.jpg" alt="Integration Team sitting in the office.">
                 </noscript>
               </picture>
             </figure>
@@ -166,16 +164,13 @@
           <div class="card card-row card-row-rev card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-              <source media="(max-width: 47.99em)" srcset="images/content/img-content-analytics-crop.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
-              <source media="(min-width: 48em)" srcset="images/content/img-content-analytics.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
-              <img src="images/content/img-content-analytics.jpg"  alt="Illustration of analytical icons. Vector art." >
+                <source media="(min-width: 40em)" srcset="images/content/img-content-analytics.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
+                <img src="images/content/img-content-analytics-crop.png" data-src="images/content/img-content-analytics-crop.png" class="lazyload" alt="Illustration of analytical icons. Vector art.">
                 <noscript>
-                  <img src="images/content/img-content-analytics.jpg"  alt="Illustration of analytical icons. Vector art." >
+                  <img src="images/content/img-content-analytics-noscript.jpg" alt="Illustration of analytical icons. Vector art.">
                 </noscript>
               </picture>
             </figure>
-            
-            
             <div class="card-block">
               <h2 id="custom-analytics" class="card-title">Custom Analytics</h2>
               <p class="card-text">Our technology and service transforms the way our customers make decisions. We combine data, technology and analytics to give our customers a competitive edge and help customers rethink and reinvent their strategy by understanding their business data.</p>
