add jpegs to banners

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <figure class="media-item mb-0 lazyload">
               <picture>
                 <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">              
-                <img src="images/content/img-content-subscription-services-crop.png" data-src="images/content/img-content-subscription-services-crop.png" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-subscription-services-crop.jpg" data-src="images/content/img-content-subscription-services-crop.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
                 <noscript>
                   <img src="images/content/img-content-subscription-services-noscript.jpg" alt="A group of application interfaces arranged in a cool grid.">
                 </noscript>
@@ -119,7 +119,7 @@
             <figure class="media-item mb-0 lazyload">
               <picture>
                 <source media="(min-width: 40em)" srcset="images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
-                <img src="images/content/img-content-integration-team-crop.png" data-src="images/content/img-content-integration-team-crop.png" class="lazyload" alt="Integration Team sitting in the office.">
+                <img src="images/content/img-content-integration-team-crop.jpg" data-src="images/content/img-content-integration-team-crop.jpg" class="lazyload" alt="Integration Team sitting in the office.">
                 <noscript>
                   <img src="images/content/img-content-integration-team-noscript.jpg" alt="Integration Team sitting in the office.">
                 </noscript>
@@ -142,7 +142,7 @@
             <figure class="media-item mb-0 lazyload">
               <picture>
                 <source media="(min-width: 40em)" srcset="images/content/img-content-testing.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
-                <img src="images/content/img-content-testing-crop.png" data-src="images/content/img-content-testing-crop.png" class="lazyload" alt="Integration Team sitting in the office.">
+                <img src="images/content/img-content-testing-crop.jpg" data-src="images/content/img-content-testing-crop.jpg" class="lazyload" alt="Integration Team sitting in the office.">
                 <noscript>
                   <img src="images/content/img-content-testing-noscript.jpg" alt="Integration Team sitting in the office.">
                 </noscript>
@@ -165,7 +165,7 @@
             <figure class="media-item mb-0 lazyload">
               <picture>
                 <source media="(min-width: 40em)" srcset="images/content/img-content-analytics.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
-                <img src="images/content/img-content-analytics-crop.png" data-src="images/content/img-content-analytics-crop.png" class="lazyload" alt="Illustration of analytical icons. Vector art.">
+                <img src="images/content/img-content-analytics-crop.jpg" data-src="images/content/img-content-analytics-crop.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
                 <noscript>
                   <img src="images/content/img-content-analytics-noscript.jpg" alt="Illustration of analytical icons. Vector art.">
                 </noscript>
