--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -18,7 +18,7 @@
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="content-page">
 
   <div class="site-wrapper">
 
@@ -79,21 +79,32 @@
 
     <main id="main" role="main">
 
-      <!-- masthead -->
-      <section class="masthead bg-hero bg-hero-globe theme-black">
+      <!-- breadcrumbs -->
+      <nav class="breadcrumb">
         <div class="container">
-          <h1>Building a Connected World</h1>
+          <a class="breadcrumb-item" href="index.html">Home</a>
+          <a class="breadcrumb-item" href="#">Services</a>
+          <a class="breadcrumb-item" href="#">Software as a Service</a>
+          <span class="breadcrumb-item active">Current Page</span>
+        </div>
+      </nav>
+
+      <!-- masthead -->
+      <section class="masthead theme-black hidden">
+        <div class="container">
+          <h1>Master Content Page</h1>
           <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and
             Enterprises.</p>
           <a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Learn More <svg class="icon icon-outline rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>
         </div>
       </section>
 
-      <!-- CTA banner -->
+      <!-- Page Content -->
       <section id="page-start" class="banner banner-full">
         <div class="container">
-          <!-- banner -->
+          <!-- card -->
           <div class="card card-row card-clean">
+            <!-- Page Media -->
             <figure class="media-item mb-0 lazyload">
               <picture>
                 <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">              
@@ -103,79 +114,12 @@
                 </noscript>
               </picture>
             </figure>
+            <!-- Page Copy -->
             <div class="card-block">
               <h2 id="subscription-services" class="card-title">Subscription Services</h2>
-              <p class="card-text">The hosted Software-as-a-Service (SaaS) model also allows service providers to become more agile with the ability to quickly create, bundle and implement new offerings with minimal CapEx investments.</p>
-              <a href="subscription-services.html" class="btn btn-lg btn-text">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- CTA banner -->
-      <section class="banner banner-full">
-        <div class="container">
-          <!-- banner -->
-          <div class="card card-row card-row-rev card-clean">
-            <figure class="media-item mb-0 lazyload">
-              <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
-                <img src="images/content/img-content-integration-team-crop.jpg" data-src="images/content/img-content-integration-team-crop.jpg" class="lazyload" alt="Integration Team sitting in the office.">
-                <noscript>
-                  <img src="images/content/img-content-integration-team-noscript.jpg" alt="Integration Team sitting in the office.">
-                </noscript>
-              </picture>
-            </figure>
-            <div class="card-block">
-              <h2 id="integration-services" class="card-title">Integration Services</h2>
-              <p class="card-text">Our team has deep understanding and capability in designing solutions ground up to take advantage of cloud’s extreme elasticity and physical availability across multiple geographies.</p>
-              <a href="#" class="btn btn-lg btn-text">Meet the team <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- CTA banner -->
-      <section id="page-start" class="banner banner-full">
-        <div class="container">
-          <!-- banner -->
-          <div class="card card-row card-clean">
-            <figure class="media-item mb-0 lazyload">
-              <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-testing.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
-                <img src="images/content/img-content-testing-crop.jpg" data-src="images/content/img-content-testing-crop.jpg" class="lazyload" alt="Integration Team sitting in the office.">
-                <noscript>
-                  <img src="images/content/img-content-testing-noscript.jpg" alt="Integration Team sitting in the office.">
-                </noscript>
-              </picture>
-            </figure>
-            <div class="card-block">
-              <h2 id="advanced-testing" class="card-title">Advanced Testing</h2>
-              <p class="card-text">Our testing platform reduces risk and costs while delivering continuous quality. We help our clients to avoid unnecessary test costs by designing and managing the end-to-end Testing process and keep the focus on delivering the best value.</p>
-              <a href="#" class="btn btn-lg btn-text">Take a closer look <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- CTA banner -->
-      <section class="banner banner-full">
-        <div class="container">
-          <!-- banner -->
-          <div class="card card-row card-row-rev card-clean">
-            <figure class="media-item mb-0 lazyload">
-              <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-analytics.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
-                <img src="images/content/img-content-analytics-crop.jpg" data-src="images/content/img-content-analytics-crop.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
-                <noscript>
-                  <img src="images/content/img-content-analytics-noscript.jpg" alt="Illustration of analytical icons. Vector art.">
-                </noscript>
-              </picture>
-            </figure>
-            <div class="card-block">
-              <h2 id="custom-analytics" class="card-title">Custom Analytics</h2>
-              <p class="card-text">Our technology and service transforms the way our customers make decisions. We combine data, technology and analytics to give our customers a competitive edge and help customers rethink and reinvent their strategy by understanding their business data.</p>
-              <a href="#" class="btn btn-lg btn-text">Browse sample reports <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+              <p class="card-text">The industry is in the middle of a major IT Digital Transformation in a race to offer Everything-as-a-Service as the acceleration and convergence of Telephony &amp; Carrier Network Services, IT, Internet-of-Things (IoT), Mobility, and Software-as-a-Service (SaaS) Markets all combine into one and the need for a new platform to manage this transformation for service providers, channel sales, and customers becomes imperative.</p>
+              <p class="card-text">We have the first cloud-based, pre-integrated "Virtual Telco" platform on a subscription basis or Pay-as-You-Grow model allowing practically anyone in the independent sales channel to become a digital service provider and to effectively compete with any size company in this increasingly technical environment, especially for highly focused vertical markets and small to medium size enterprises (SMEs). The hosted Software-as-a-Service (SaaS) model also allows service providers to become more agile with the ability to quickly create, bundle and implement new offerings with minimal capex investments.</p>
+              <a href="subscription-services.html" class="btn btn-lg btn-text">Sign up and get started <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
         </div>
