--- a/MASTER.html
+++ b/MASTER.html
@@ -62,9 +62,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="advanced-testing.html">Testing</a>
               </li>
-              <li class="nav-item">
+              <!--<li class="nav-item">
                 <a class="nav-link" href="concordus-customers.html">Customers</a>
-              </li>
+              </li>-->
               <li class="nav-item">
                 <a class="nav-link" href="contact.html"  data-toggle="modal" data-target="#contact-modal">Contact</a>
               </li>
