master content page

--- a/subscription-services.html
+++ b/subscription-services.html
@@ -93,8 +93,7 @@
       <section class="masthead theme-black hidden">
         <div class="container">
           <h1>Master Content Page</h1>
-          <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and
-            Enterprises.</p>
+          <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
           <a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Learn More <svg class="icon icon-outline rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>
         </div>
       </section>
