--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -90,7 +90,7 @@
       </nav>
 
       <!-- masthead -->
-      <section class="masthead bg-full pt-pb-5">
+      <section class="masthead bg-full">
         <div class="container">
           <h1>Master Content Page</h1>
           <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
@@ -161,7 +161,7 @@
             <p>We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools. Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions.Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc.</p>
 
             <blockquote class="blockquote">
-              <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+              <p class="h5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
               <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
             </blockquote>
 
@@ -211,7 +211,13 @@
 
             <p class="text-lg">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
 
-            <a class="btn btn-primary btn-lg mb-1" href="#">Learn more <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+            <a class="btn btn-round btn-outline btn-primary btn-lg mb-1 pr-tiny" href="#">Call to Action <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+
+            <a class="btn btn-round btn-primary btn-lg mb-1 pr-tiny" href="#">Call to Action <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+
+            <a class="btn btn-round btn-outline btn-secondary btn-lg mb-1" href="#">Call to Action</a>
+
+            <a class="btn btn-round btn-secondary btn-lg mb-1" href="#">Call to Action</a>
 
             <!-- list & media item -->
             <div class="row pt-1">
@@ -294,7 +300,7 @@
                     <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
                   </noscript>
                 </picture>
-                <figcaption class="figure-caption">A caption for the above image.</figcaption>
+                <figcaption class="figure-caption">This is a Rounded Mask image.</figcaption>
               </figure>
 
             </div>
