about page template

--- a/MASTER.html
+++ b/MASTER.html
@@ -18,7 +18,7 @@
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="content-page">
 
   <div class="site-wrapper">
 
@@ -79,6 +79,15 @@
 
     <main id="main" role="main">
 
+      <!-- breadcrumbs -->
+      <nav class="breadcrumb">
+        <div class="container">
+          <a class="breadcrumb-item" href="index.html">Home</a>
+          <a class="breadcrumb-item" href="#">Services</a>
+          <a class="breadcrumb-item" href="#">Software as a Service</a>
+          <span class="breadcrumb-item active">Current Page</span>
+        </div>
+      </nav>
 
 
     </main>
@@ -167,7 +176,6 @@
     }
 
   </script>
-
 
   <!-- Bootstrap core JavaScript
     ================================================== -->
