master content page updates
new theme layers

--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -89,7 +89,20 @@
       </nav>
 
       <!-- masthead -->
-      <section class="masthead bg-full">
+      <section class="masthead bg-full theme-light">
+        <div class="container">
+          <h1>Master Content Page</h1>
+          <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
+          <!--<a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Learn More <svg class="icon icon-outline rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
+          <div class="btn-group">
+            <a href="#page-start" class="btn btn-lg btn-round btn-secondary" data-scroll>Learn More</a>
+            <a href="#page-start" class="btn btn-lg btn-round btn-primary" data-scroll>Get Started</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- masthead (dark) -->
+      <section class="masthead bg-full theme-black">
         <div class="container">
           <h1>Master Content Page</h1>
           <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
