--- a/about.html
+++ b/about.html
@@ -131,9 +131,9 @@
             </ul>
           </div>          
 
-          <h2 id="concordus-goals" class="align-center pt-1 text-xl">Goals</h2>
+          <h2 id="concordus-goals" class="pt-1 text-xl">Goals</h2>
 
-          <p class="lead align-center mb-4">The following are the key goals that we strive for in everything we do:</p>
+          <p class="lead  mb-4">The following are the key goals that we strive for in everything we do:</p>
 
           <!-- media item (left) -->
           <figure class="media-item float-r mw-25em pl-1 lazyload">
