--- a/index.html
+++ b/index.html
@@ -296,5 +296,22 @@
 
   </script>
 
+  <!-- headroom (if you like that sort of thing) -->
+  <script>
+    // Media Queries
+      var mq = window.matchMedia('(min-width: 48em)');
+      if(mq.matches) {
+        // grab an element
+        var myElement = document.querySelector(".site-header");
+        // construct an instance of Headroom, passing the element
+        var headroom  = new Headroom(myElement);	
+        // initialise
+        headroom.init();
+      } 
+      else {  
+        headroom.destroy();
+      }
+  </script>
+
 </body>
 </html>
