--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
             </figure>
 
             <!-- list -->
-            <ul class="col-md-7 MontserratLight">
+            <ul class="col-md-7">
               <p id="culture-and-values" class="h2 list-title">Culture &amp; Values</p>
               <li>Customers at heart – Serve our Customer smarter and quicker</li>
               <li>Sharper and more powerful Digital offerings</li>
@@ -175,7 +175,7 @@
           <div class="row mr-ml-a mb-2">
 
             <!-- list -->
-            <ul class="col-sm-6 mr-ml-a MontserratLight">
+            <ul class="col-sm-6 mr-ml-a">
               <p id="BSS/OSS-team" class="h4 list-title">BSS/OSS Team</p>
               <li>Program Managers</li>
               <li>Enterprise Architect</li>
@@ -187,7 +187,7 @@
             </ul>
 
             <!-- list -->
-            <ul class="col-sm-6 mr-ml-a MontserratLight">
+            <ul class="col-sm-6 mr-ml-a">
               <p id="testing-team" class="h4 list-title">Testing Team:</p>
               <li><strong class="Montserrat">Test Manager</strong> With 15 years of international experience of the Test delivery of up to $70 million programs across various organizations in the US, India, China, Australia and New Zealand.</li>
               <li><strong class="Montserrat">Test Leads</strong> This is a group of Test leaders who manage team of Test analysts and lead the planning of Test strategy and Test cases.</li>
@@ -200,7 +200,7 @@
           <div class="row mr-ml-a mb-2">
 
             <!-- list -->
-            <ul class="col-sm-6 mr-ml-a pr-4 MontserratLight">
+            <ul class="col-sm-6 mr-ml-a pr-4">
               <p id="integration-team" class="h4 list-title">Integration Team</p>
               <li><strong class="Montserrat">Integration Manager:</strong> 20+ years' experience in design, development, solution and management of integration solutions. Has a long history of delivering successful integration projects over the years across different roles, technologies, industries and development methodologies.</li>
               <li><strong class="Montserrat">Integration Architect:</strong> With 15+ Years of experience in Integration Architecture, the Concordus Architect is an invaluable asset for our team and our Customers. He has integrated mainframe systems, Enterprise systems built on Java or .Net technologies and covering modules like the CRM, Customer Portals, Billing, ERP etc. His skills include a range of popular SOA platforms and web services architectures. In most Concordus projects, the Integration Architect gets involved from the concept stage and remains engaged all the way through to implementation and post implementation support.</li>
@@ -209,7 +209,7 @@
             </ul>
 
             <!-- list -->
-            <ul class="col-sm-6 mr-ml-a MontserratLight">
+            <ul class="col-sm-6 mr-ml-a">
               <p id="analytics-team" class="h4 list-title">Analytics Team::</p>
               <li><strong class="Montserrat">Data Scientists</strong> We have a team of highly-qualified and proficient Data scientists on our team. These resources are experts in the use of Data Analytics, Data Mining with descriptive inferential statistics and predictive analytics.</li>
               <li><strong class="Montserrat">Data Mining Engineers</strong> Our Data Mining engineers are highly experienced Data mining rock stars that are conversant with the concepts, tools and methodology of this line.</li>
@@ -221,7 +221,7 @@
           <!-- list row -->
           <div class="row mr-ml-a">
             <!-- list -->
-            <ul class="col MontserratLight">
+            <ul class="col">
               <p id="cloud-specialists" class="h4 list-title">Cloud Specialists</p>
               <li>We have Cloud experts on the team who have worked extensively with Cloud technologies like Amazon Web Services (AWS), Microsoft Azure etc. We know how to use these Cloud infrastructures in the most secure, high performance and cost-optimized manner.</li>
             </ul>
